--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "sanity": "^3.59.0",
     "sanity-plugin-documents-pane": "^2.3.0",
+    "sanity-plugin-media": "^2.3.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
