--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/dashboard": "^4.1.0",
     "@sanity/vision": "^3.59.0",
     "lucide-react": "^0.447.0",
     "react": "^18.2.0",
