--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "sanity": "^3.59.0",
     "sanity-plugin-documents-pane": "^2.3.0",
+    "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.3.2",
     "styled-components": "^6.1.8"
   },
